# VulkanTerrain

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Camera.cpp  Camera.hpp  Common.hpp  CubeVertexData.hpp  EventDispatcher.hpp  FragmentShaderText.hpp  Game.hpp  LICENSE  Makefile  Platform.cpp  Platform.hpp  PlatformXcb.cpp  PlatformXcb.hpp  README.md  Vertex.hpp  VertexShaderText.hpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanCore.cpp  VulkanCore.hpp  VulkanDepthBuffer.cpp  VulkanDepthBuffer.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanShaderProgram.cpp  VulkanShaderProgram.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanUniformBuffer.cpp  VulkanUniformBuffer.hpp  WindowSettings.hpp  WindowXcb.cpp  WindowXcb.hpp  (+5 more)
Buffers/: VulkanDepthBuffer.cpp  VulkanDepthBuffer.hpp  VulkanFrameBuffers.cpp  VulkanFrameBuffers.hpp  VulkanUniformBuffer.cpp  VulkanUniformBuffer.hpp  VulkanVertexBuffer.cpp  VulkanVertexBuffer.hpp
Command/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp
Pipeline/: VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPipelineCache.cpp  VulkanPipelineCache.hpp
Shader/: VertexShaderText.hpp  VulkanShaderProgram.cpp  VulkanShaderProgram.hpp
Utils/: glslanghelper.hpp  util.hpp
assets/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
examples/: CMakeLists.txt  gametest.cpp  main.cpp
framework/: BufferManager.cpp  BufferManager.hpp  Common.hpp  Context.cpp  Context.hpp  FenceManager.cpp  Model.cpp  Model.hpp  VertexBufferManager.hpp
framework/buffers/: BufferManager.cpp  BufferManager.hpp  VertexBufferManager.cpp
include/: tobi.hpp
include/framework/: Common.hpp  IContext.hpp  TobiStatus.hpp
old/: Camera.cpp  Camera.hpp  README.md  VulkanDescriptorPool.cpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSwapChain.hpp
old/Buffers/: VulkanDepthBuffer.cpp  VulkanDepthBuffer.hpp  VulkanFrameBuffers.cpp  VulkanUniformBuffer.cpp  VulkanVertexBuffer.hpp
old/Command/: VulkanCommandPool.cpp
old/Pipeline/: VulkanPipelineCache.cpp
old/Utils/: glslanghelper.cpp  glslanghelper.hpp
platform/: AssetManager.hpp  Platform.cpp  Platform.hpp
platform/xcb/: PlatformXcb.cpp  PlatformXcb.hpp
source/: CubeVertexData.hpp  EventDispatcher.hpp  WindowXcb.cpp  WindowXcb.hpp  main.cpp
source/Buffers/: VulkanVertexBuffer.cpp
source/Command/: VulkanCommandBuffer.cpp
source/Game/: Camera.cpp  Camera.hpp  KeyCodes.hpp  KeyState.hpp
source/Pipeline/: VulkanPipeline.hpp
source/Shader/: VulkanShaderProgram.hpp
source/Utils/: AssertTypeDefine.hpp  util.hpp
source/framework/: CommandBufferManager.cpp  CommandBufferManager.hpp  Common.hpp  Context.cpp  Context.hpp  EventDispatcher.hpp  EventDispatchers.cpp  EventDispatchers.hpp  FenceManager.hpp  PerFrame.hpp  SemaphoreManager.cpp  SemaphoreManager.hpp  Status.hpp  Vertex.hpp
source/framework/buffers/: Buffer.hpp  BufferManager.cpp  BufferManager.hpp  IndexBufferManager.hpp  UniformBufferManager.cpp  UniformBufferManager.hpp  VertexBufferManager.cpp  VertexBufferManager.hpp
source/framework/model/: Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  ObjectManager.cpp  ObjectManager.hpp  Vertex.hpp
source/game/: Camera.hpp  KeyState.cpp
source/platform/: AssetManager.cpp  AssetManager.hpp  Platform.cpp  Platform.hpp  SwapChainDimensions.hpp
source/platform/xcb/: PlatformXcb.cpp  PlatformXcb.hpp
spike/VulkanCmake/: CMakeLists.txt
spike/VulkanCmake/include/MyMath/: mymath.hpp
spike/VulkanCmake/src/: CMakeLists.txt  main.cpp  version.hpp
spike/VulkanCmake/src/MyMath/: CMakeLists.txt  mymath.cpp
spike/VulkanCmake/src/VulkanEngine/: CMakeLists.txt  VulkanDevice.cpp  VulkanDevice.hpp
spike/VulkanCmake/src/VulkanEngine/Model/: Model.cpp  Model.hpp  ModelCreateInfo.cpp  ModelCreateInfo.hpp  ModelPart.hpp  VertexComponent.hpp  VertexLayout.cpp  VertexLayout.hpp
spike/VulkanCmake/tests/: CMakeLists.txt
spike/VulkanCmake/tests/VulkanEngine/Model/: ModelTest.cpp  VertexLayoutTest.cpp
src/: CMakeLists.txt  tobi.cpp
src/framework/: CommandBufferManager.cpp  CommandBufferManager.hpp  Context.cpp  Context.hpp  EventDispatcher.hpp  FenceManager.cpp  FenceManager.hpp  IContext.cpp  PerFrame.cpp  PerFrame.hpp  SemaphoreManager.cpp  SemaphoreManager.hpp  ShaderDataBlock.hpp  VkCommon.hpp
src/framework/buffers/: BufferManager.cpp  BufferManager.hpp  IndexBufferManager.cpp  UniformBufferManager.hpp  VertexBufferManager.cpp
src/framework/model/: Model.cpp  ModelManager.cpp  ModelManager.hpp  ObjectManager.cpp  ObjectManager.hpp  Vertex.hpp
src/game/: Camera.cpp  Camera.hpp  KeyState.hpp
src/platform/: AssetManager.hpp  Platform.cpp  Platform.hpp
src/platform/xcb/: PlatformXcb.cpp  PlatformXcb.hpp
tests/: CMakeLists.txt
